# jetson-orin-agx-gpio-board

./: CMakeLists.txt  README.md  package.xml
launch/: jetson_gpio_interface_launch.py
msg/: GpioStates.msg
scripts/: jetson_gpio_interface.py  jetson_gpio_test.py
setup/: jetsonCanSetup.bash
srv/: GpioSetOutput.srv
